--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,5 +33,8 @@ jobs:
       - name: Install dependencies
         run: poetry install --no-root
 
+      - name: Install Playwright Browsers
+        run: poetry run playwright install
+
       - name: Run tests
         run: poetry run pytest
